chore: Upgrade dependencies and improve static checks
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>